# Alchemy

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: README.md  __init__.py  requirements.txt
backend/app/: __init__.py  main.py
backend/app/analytics/: __init__.py
backend/app/api/: __init__.py
backend/app/cli/: __init__.py  main.py
backend/app/config/: __init__.py  settings.py
backend/app/constants/: __init__.py  enums.py  errors.py  models.py  thresholds.py
backend/app/context/: __init__.py  models.py
backend/app/context/chunking/: chunker.py
backend/app/context/memory/: unified_memory_service.py
backend/app/context/retrieval/: relevance_filter.py
backend/app/core/: __init__.py  lifecycle.py  logging.py
backend/app/embeddings/: __init__.py
backend/app/exceptions/: __init__.py  base.py
backend/app/gateway/: __init__.py  mock.py  otari_client.py
backend/app/models/: __init__.py  analysis.py  budget.py  request.py  response.py  routing.py
backend/app/modules/: __init__.py
backend/app/modules/budget/: __init__.py
backend/app/modules/cache/: __init__.py
backend/app/modules/fast_detector/: __init__.py  detector.py
backend/app/modules/parallel/: __init__.py
backend/app/modules/task_analyzer/: __init__.py  analyzer.py
backend/app/pipeline/: __init__.py  checkpoint_manager.py  event_dispatcher.py  exceptions.py  execution_trace.py  orchestrator.py  pipeline_context.py  pipeline_summary.py  retry_manager.py  stage_executor.py  stage_status.py
backend/app/prompts/: __init__.py
backend/app/routing/: __init__.py  engine.py  registry.py
backend/app/schemas/: __init__.py
backend/app/security/: __init__.py  scanner.py
backend/app/services/: __init__.py  pipeline.py
backend/app/storage/: __init__.py
backend/app/utils/: __init__.py
backend/app/voice/: __init__.py  audio_recorder.py  exceptions.py  speech_to_text.py  voice_manager.py
backend/scripts/: export_analytics.py  seed_cache.py
backend/tests/: __init__.py  conftest.py
backend/tests/context/: test_relevance_filter.py
backend/tests/integration/: __init__.py  test_pipeline.py
backend/tests/load/: __init__.py
backend/tests/security/: __init__.py  test_scanner.py
backend/tests/unit/: __init__.py  test_exceptions.py  test_fast_detector.py  test_logging.py  test_mock_engine.py  test_models.py  test_otari_gateway.py  test_pipeline_improvements.py  test_pipeline_orchestrator.py  test_routing.py  test_settings.py  test_task_analyzer.py  test_voice.py
docs/: PRD.md
docs/api/: contracts.md
docs/architecture/: diagrams.md
frontend/: __init__.py
frontend/animations/: __init__.py
frontend/assets/: __init__.py
frontend/cli/: __init__.py  app.py  session.py
frontend/config/: __init__.py
frontend/dashboard/: __init__.py  dashboard.py
frontend/tests/: test_cli.py
frontend/themes/: __init__.py
frontend/ui/: __init__.py  banner.py  theme.py
frontend/utils/: __init__.py
frontend/voice/: __init__.py
