[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alchemy"
version = "0.1.0"
description = "Adaptive Cost-Aware AI Gateway powered by Mozilla Otari"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Alchemy Contributors" },
]
keywords = ["ai", "gateway", "llm", "routing", "otari"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "typer>=0.15.0",
    "rich>=13.9.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "loguru>=0.7.3",
    "python-dotenv>=1.0.1",
    "sentence-transformers>=3.3.0",
    "faiss-cpu>=1.9.0",
    "aiosqlite>=0.20.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "black>=24.10.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "pytest-mock>=3.14.0",
]

[project.scripts]
alchemy = "frontend.cli.app:app"
alchemy-admin = "backend.app.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["backend", "frontend"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["backend", "frontend"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
# NOTE: flake8-type-checking (TCH/TC) is intentionally NOT enabled. This is a
# Pydantic v2 + Typer codebase where model field and CLI parameter annotations
# must be importable at runtime; moving those imports into TYPE_CHECKING blocks
# would break model construction and CLI option parsing.
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function call in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["backend", "frontend"]

[tool.black]
target-version = ["py312"]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "faiss",
    "sentence_transformers",
    "smallest",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["backend/tests", "frontend/tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "load: Load/performance tests",
    "security: Security tests",
]
addopts = "-v --tb=short"
